# gds-render

./: .buildconfig  .gitignore  .gitmodules  CMakeLists.txt  README.MD  command-line.c  command-line.h  external-renderer.c  external-renderer.h  gds-render-gui.c  gds-render-gui.h  gds-types.h  gdsparse.c  gdsparse.h  layer-element.c  layer-element.h  layer-selector-dnd.c  layer-selector-dnd.h  layer-selector.c  layer-selector.h  main-window.c  main-window.h  main.c  mapping-parser.c  mapping-parser.h
.github/workflows/: cmake.yml
AUR/: PKGBUILD  gds-render.desktop
cairo-output/: cairo-output.c  cairo-output.h
cairo-renderer/: cairo-output.c
cell-selector/: cell-statistics-renderer.c  lib-cell-renderer.c  tree-store.c
doxygen/: CMakeLists.txt  Doxyconfig  activity-bar.dox  build-doxygen.sh  cairo-renderer.dox  command-line.dox  compilation.dox  external-renderer.dox  gds-output-renderer.dox  geometric.dox  gui.dox  latex-renderer.dox  layer-selector.dox  lib-cell-renderer.dox  lmf-spec.dox  main-application.dox  main-page.dox  plugins.dox  renderers.dox  trigonometric.dox  usage.dox  versioning.dox  widgets.dox
gds-parser/: gds-parser.c  gds-parser.h  gds-tree-checker.c  gds-tree-checker.h  gds-types.h
gds-utils/: gds-parser.c  gds-statistics.c  gds-tree-checker.c
geometric/: bounding-box.c  cell-geometrics.c  vector-operations.c
glade/: CMakeLists.txt  about.glade  dialog.glade  layer-widget.glade  main.glade  resources.xml
include/gds-render/: command-line.h  external-renderer.h  gds-render-gui.h  version.h
include/gds-render/cairo-renderer/: cairo-output.h
include/gds-render/cell-selector/: cell-statistics-renderer.h  lib-cell-renderer.h  tree-store.h
include/gds-render/gds-utils/: gds-parser.h  gds-statistics.h  gds-tree-checker.h  gds-types.h
include/gds-render/geometric/: bounding-box.h  cell-geometrics.h  vector-operations.h
include/gds-render/latex-renderer/: latex-output.h
include/gds-render/layer/: color-palette.h  layer-info.h  layer-selector.h  layer-settings.h  mapping-parser.h
include/gds-render/output-renderers/: cairo-renderer.h  external-renderer-interfaces.h  external-renderer.h  gds-output-renderer.h  latex-output.h  latex-renderer.h
include/gds-render/tree-renderer/: lib-cell-renderer.h
include/gds-render/widgets/: activity-bar.h  conv-settings-dialog.h  layer-element.h
latex-output/: latex-output.c  latex-output.h
latex-renderer/: latex-output.c
layer/: color-palette.c  layer-info.c  layer-info.h  layer-selector-dnd.c  layer-selector-dnd.h  layer-selector.c  layer-selector.h  layer-settings.c  mapping-parser.c
layer-selector/: layer-selector-dnd.c  layer-selector.c  layer-selector.h
layer-widget/: layer-element.c  layer-element.h
output-renderers/: cairo-output.c  cairo-renderer.c  external-renderer.c  gds-output-renderer.c  latex-output.c  latex-renderer.c
plugins/: CMakeLists.txt
plugins/plugin-example/: CMakeLists.txt
plugins/plugin-example/src/: plugin-main.c
plugins/python-renderer/: CMakeLists.txt
plugins/python-renderer/src/: plugin-main.c
resources/: CMakeLists.txt  about.glade  color-palette.txt  dialog.glade  layer-widget.glade  main.glade  resources.xml
test/: CMakeLists.txt
test-data/: .gitignore  path.gds  path.tex  test.gds  test.tex
test-data/polygon+path/: layer-mapping.map
test/geometric/: vector-operations.cpp
translations/: CMakeLists.txt  generate-mo.sh  generate_templates.sh
translations/pot/: command-line.pot  gds-render-gui.pot  gds-render.pot  gds-utils_gds-tree-checker.pot  main.pot  output-renderers_cairo-renderer.pot  output-renderers_external-renderer.pot  output-renderers_gds-output-renderer.pot  output-renderers_latex-renderer.pot  prepare_language.sh  widgets_activity-bar.pot  widgets_conv-settings-dialog.pot  widgets_layer-element.pot
translations/pot/po/de/: command-line.po  gds-render-gui.po  gds-render.po  main.po  widgets_activity-bar.po
tree-renderer/: lib-cell-renderer.c  lib-cell-renderer.h  tree-store.c  tree-store.h
trigonometric/: bounding-box.c  bounding-box.h  cell-trigonometrics.c  cell-trigonometrics.h  vector-operations.c  vector-operations.h
version/: CMakeLists.txt  generate-git-commit-string.sh  generate-version-string.sh  version.c
widgets/: activity-bar.c  conv-settings-dialog.c  conv-settings-dialog.h  layer-element.c  layer-element.h
